--- a/css/sass/_modules.scss
+++ b/css/sass/_modules.scss
@@ -67,7 +67,7 @@ button {
         top: 0;
 
         img { 
-            margin: auto 0;
+            margin: auto;
             position: absolute;
             top: 0;
             left: 0;
